--- a/lang/English.ini
+++ b/lang/English.ini
@@ -12,6 +12,7 @@ sag = "SAG"
 user_role = "User Role"
 permissions_1 = "Permissions"
 error_1 = "Something went wrong."
+error_2 = "Error"
 
 ; ----------------------------------------------- ;
 ; User Right Page - Popup Notifications for Users ;
@@ -118,164 +119,312 @@ status_ui_47 = "when the SAG module is first enabled in a project that already h
 status_ui_48 = "when a user's SAG assignment is changed"
 status_ui_49 = "Actions can be taken to correct these situations. Click the"
 status_ui_50 = "button below for more information."
-status_ui_51 = ""
-status_ui_52 = ""
-status_ui_53 = ""
-status_ui_54 = ""
-status_ui_55 = ""
-status_ui_56 = ""
-status_ui_57 = ""
-status_ui_58 = ""
-status_ui_59 = ""
-status_ui_60 = ""
-status_ui_61 = ""
-status_ui_62 = ""
-status_ui_63 = ""
-status_ui_64 = ""
-status_ui_65 = ""
-status_ui_66 = ""
-status_ui_67 = ""
-status_ui_68 = ""
-status_ui_69 = ""
-status_ui_70 = ""
-status_ui_71 = ""
-status_ui_72 = ""
-status_ui_73 = ""
-status_ui_74 = ""
-status_ui_75 = ""
-status_ui_76 = ""
-status_ui_77 = ""
-status_ui_78 = ""
-status_ui_79 = ""
-status_ui_80 = ""
-status_ui_81 = ""
-status_ui_82 = ""
-status_ui_83 = ""
-status_ui_84 = ""
-status_ui_85 = ""
-status_ui_86 = ""
-status_ui_87 = ""
-status_ui_88 = ""
-status_ui_89 = ""
-status_ui_90 = ""
-status_ui_91 = ""
-status_ui_92 = ""
-status_ui_93 = ""
-status_ui_94 = ""
-status_ui_95 = ""
-status_ui_96 = ""
-status_ui_97 = ""
-status_ui_98 = ""
-status_ui_99 = ""
-status_ui_100 = ""
-status_ui_101 = ""
-status_ui_102 = ""
-status_ui_103 = ""
-status_ui_104 = ""
-status_ui_105 = ""
-status_ui_106 = ""
-status_ui_107 = ""
-status_ui_108 = ""
-status_ui_109 = ""
-status_ui_110 = ""
-status_ui_111 = ""
-status_ui_112 = ""
-status_ui_113 = ""
-status_ui_114 = ""
-status_ui_115 = ""
-status_ui_116 = ""
-status_ui_117 = ""
-status_ui_118 = ""
-status_ui_119 = ""
-status_ui_120 = ""
-status_ui_121 = ""
-status_ui_122 = ""
-status_ui_123 = ""
-status_ui_124 = ""
-status_ui_125 = ""
-status_ui_126 = ""
-status_ui_127 = ""
-status_ui_128 = ""
-status_ui_129 = ""
-status_ui_130 = ""
-status_ui_131 = ""
-status_ui_132 = ""
-status_ui_133 = ""
-status_ui_134 = ""
-status_ui_135 = ""
-status_ui_136 = ""
-status_ui_137 = ""
-status_ui_138 = ""
-status_ui_139 = ""
-status_ui_140 = ""
-status_ui_141 = ""
-status_ui_142 = ""
-status_ui_143 = ""
-status_ui_144 = ""
-status_ui_145 = ""
-status_ui_146 = ""
-status_ui_147 = ""
-status_ui_148 = ""
-status_ui_149 = ""
-status_ui_150 = ""
-status_ui_151 = ""
-status_ui_152 = ""
-status_ui_153 = ""
-status_ui_154 = ""
-status_ui_155 = ""
-status_ui_156 = ""
-status_ui_157 = ""
-status_ui_158 = ""
-status_ui_159 = ""
-status_ui_160 = ""
-status_ui_161 = ""
-status_ui_162 = ""
-status_ui_163 = ""
-status_ui_164 = ""
-status_ui_165 = ""
-status_ui_166 = ""
-status_ui_167 = ""
-status_ui_168 = ""
-status_ui_169 = ""
-status_ui_170 = ""
-status_ui_171 = ""
-status_ui_172 = ""
-status_ui_173 = ""
-status_ui_174 = ""
-status_ui_175 = ""
-status_ui_176 = ""
-status_ui_177 = ""
-status_ui_178 = ""
-status_ui_179 = ""
-status_ui_180 = ""
-status_ui_181 = ""
-status_ui_182 = ""
-status_ui_183 = ""
-status_ui_184 = ""
-status_ui_185 = ""
-status_ui_186 = ""
-status_ui_187 = ""
-status_ui_188 = ""
-status_ui_189 = ""
-status_ui_190 = ""
-status_ui_191 = ""
-status_ui_192 = ""
-status_ui_193 = ""
-status_ui_194 = ""
-status_ui_195 = ""
-status_ui_196 = ""
-status_ui_197 = ""
-status_ui_198 = ""
-status_ui_199 = ""
-status_ui_200 = ""
-status_ui_201 = ""
-status_ui_202 = ""
-status_ui_203 = ""
-status_ui_204 = ""
-status_ui_205 = ""
-status_ui_206 = ""
-status_ui_207 = ""
-status_ui_208 = ""
-status_ui_209 = ""
-status_ui_210 = ""
-status_ui_211 = ""
+status_ui_51 = "Display Users"
+status_ui_52 = "Expired Users"
+status_ui_53 = "Non-Expired Users"
+status_ui_54 = "Users with noncompliant rights"
+status_ui_55 = "Users without noncompliant rights"
+status_ui_56 = "Email User(s)"
+status_ui_57 = "Email User Rights Holders"
+status_ui_58 = "Expire User(s)"
+status_ui_59 = "Username"
+status_ui_60 = "Name"
+status_ui_61 = "Email"
+status_ui_62 = "Expiration"
+status_ui_63 = "Security Access Group"
+status_ui_64 = "Noncompliant Rights"
+status_ui_65 = "Project Role"
+status_ui_66 = "The alerts were successfully sent."
+status_ui_67 = "The alert was successfully sent."
+status_ui_68 = "There was an error sending the alert."
+status_ui_69 = "The users were successfully expired."
+status_ui_70 = "The user was successfully expired."
+status_ui_71 = "Copied!"
+status_ui_72 = "None"
+status_ui_73 = "Rights"
+status_ui_74 = "Right"
+status_ui_75 = "Noncompliant Rights for {0} ({1})"
+
+dt_status_search_placeholder = "Search Users..."
+dt_status_info_filtered = "filtered from {0} total users"
+dt_status_empty_table = "No users found in this project"
+dt_status_info = "Showing {start} to {end} of {total} users"
+dt_status_info_empty = "Showing 0 to 0 of 0 users"
+dt_status_length_menu = "Show {0} users"
+dt_status_loading_records = "Loading..."
+dt_status_zero_records = "No matching users found"
+dt_status_select_rows_zero = "%d users selected"
+dt_status_select_rows_one = ""
+dt_status_select_rows_other = "One user selected"
+dt_status_paginate_first = "First"
+dt_status_paginate_previous = "Previous"
+dt_status_paginate_next = "Next"
+dt_status_paginate_last = "Last"
+dt_status_aria_sort_ascending = ": activate to sort column ascending"
+dt_status_aria_sort_descending = ": activate to sort column descending"
+
+
+
+; ------------------ ;
+; TinyMCE UI strings ;
+; ------------------ ;
+
+tiny_mce_ui_1 = "RedoXXX"
+tiny_mce_ui_2 = "UndoXXX"
+tiny_mce_ui_3 = "CutXXX"
+tiny_mce_ui_4 = "CopyXXX"
+tiny_mce_ui_5 = "PasteXXX"
+tiny_mce_ui_6 = "Select allXXX"
+tiny_mce_ui_7 = "New documentXXX"
+tiny_mce_ui_8 = "OkXXX"
+tiny_mce_ui_9 = "CancelXXX"
+tiny_mce_ui_10 = "Visual aidsXXX"
+tiny_mce_ui_11 = "BoldXXX"
+tiny_mce_ui_12 = "ItalicXXX"
+tiny_mce_ui_13 = "UnderlineXXX"
+tiny_mce_ui_14 = "Strike-throughXXX"
+tiny_mce_ui_15 = "SuperscriptXXX"
+tiny_mce_ui_16 = "SubscriptXXX"
+tiny_mce_ui_17 = "Clear formattingXXX"
+tiny_mce_ui_18 = "Align leftXXX"
+tiny_mce_ui_19 = "Align centreXXX"
+tiny_mce_ui_20 = "Align rightXXX"
+tiny_mce_ui_21 = "JustifyXXX"
+tiny_mce_ui_22 = "Bullet listXXX"
+tiny_mce_ui_23 = "Numbered listXXX"
+tiny_mce_ui_24 = "Decrease indentXXX"
+tiny_mce_ui_25 = "Increase indentXXX"
+tiny_mce_ui_26 = "CloseXXX"
+tiny_mce_ui_27 = "FormatsXXX"
+tiny_mce_ui_28 = "Your browser doesn't support direct access to the clipboard. Please use the Ctrl+X\/C\/V keyboard shortcuts instead.XXX"
+tiny_mce_ui_29 = "HeadersXXX"
+tiny_mce_ui_30 = "Header 1XXX"
+tiny_mce_ui_31 = "Header 2XXX"
+tiny_mce_ui_32 = "Header 3XXX"
+tiny_mce_ui_33 = "Header 4XXX"
+tiny_mce_ui_34 = "Header 5XXX"
+tiny_mce_ui_35 = "Header 6XXX"
+tiny_mce_ui_36 = "HeadingsXXX"
+tiny_mce_ui_37 = "Heading 1XXX"
+tiny_mce_ui_38 = "Heading 2XXX"
+tiny_mce_ui_39 = "Heading 3XXX"
+tiny_mce_ui_40 = "Heading 4XXX"
+tiny_mce_ui_41 = "Heading 5XXX"
+tiny_mce_ui_42 = "Heading 6XXX"
+tiny_mce_ui_43 = "PreformattedXXX"
+tiny_mce_ui_44 = "DivXXX"
+tiny_mce_ui_45 = "PreXXX"
+tiny_mce_ui_46 = "CodeXXX"
+tiny_mce_ui_47 = "ParagraphXXX"
+tiny_mce_ui_48 = "BlockquoteXXX"
+tiny_mce_ui_49 = "InlineXXX"
+tiny_mce_ui_50 = "BlocksXXX"
+tiny_mce_ui_51 = "Paste is now in plain text mode. Contents will now be pasted as plain text until you toggle this option off.XXX"
+tiny_mce_ui_52 = "Font FamilyXXX"
+tiny_mce_ui_53 = "Font SizesXXX"
+tiny_mce_ui_54 = "ClassXXX"
+tiny_mce_ui_55 = "Browse for an imageXXX"
+tiny_mce_ui_56 = "ORXXX"
+tiny_mce_ui_57 = "Drop an image hereXXX"
+tiny_mce_ui_58 = "UploadXXX"
+tiny_mce_ui_59 = "BlockXXX"
+tiny_mce_ui_60 = "AlignXXX"
+tiny_mce_ui_61 = "DefaultXXX"
+tiny_mce_ui_62 = "CircleXXX"
+tiny_mce_ui_63 = "DiscXXX"
+tiny_mce_ui_64 = "SquareXXX"
+tiny_mce_ui_65 = "Lower AlphaXXX"
+tiny_mce_ui_66 = "Lower GreekXXX"
+tiny_mce_ui_67 = "Lower RomanXXX"
+tiny_mce_ui_68 = "Upper AlphaXXX"
+tiny_mce_ui_69 = "Upper RomanXXX"
+tiny_mce_ui_70 = "AnchorXXX"
+tiny_mce_ui_71 = "NameXXX"
+tiny_mce_ui_72 = "IDXXX"
+tiny_mce_ui_73 = "ID should start with a letter, followed only by letters, numbers, dashes, dots, colons or underscores.XXX"
+tiny_mce_ui_74 = "You have unsaved changes are you sure you want to navigate away?XXX"
+tiny_mce_ui_75 = "Restore last draftXXX"
+tiny_mce_ui_76 = "Special characterXXX"
+tiny_mce_ui_77 = "Source codeXXX"
+tiny_mce_ui_78 = "Insert\/Edit code sampleXXX"
+tiny_mce_ui_79 = "LanguageXXX"
+tiny_mce_ui_80 = "Code sampleXXX"
+tiny_mce_ui_81 = "ColourXXX"
+tiny_mce_ui_82 = "RXXX"
+tiny_mce_ui_83 = "GXXX"
+tiny_mce_ui_84 = "BXXX"
+tiny_mce_ui_85 = "Left to rightXXX"
+tiny_mce_ui_86 = "Right to leftXXX"
+tiny_mce_ui_87 = "EmoticonsXXX"
+tiny_mce_ui_88 = "Document propertiesXXX"
+tiny_mce_ui_89 = "TitleXXX"
+tiny_mce_ui_90 = "KeywordsXXX"
+tiny_mce_ui_91 = "DescriptionXXX"
+tiny_mce_ui_92 = "RobotsXXX"
+tiny_mce_ui_93 = "AuthorXXX"
+tiny_mce_ui_94 = "EncodingXXX"
+tiny_mce_ui_95 = "Full-screenXXX"
+tiny_mce_ui_96 = "ActionXXX"
+tiny_mce_ui_97 = "ShortcutXXX"
+tiny_mce_ui_98 = "HelpXXX"
+tiny_mce_ui_99 = "AddressXXX"
+tiny_mce_ui_100 = "Focus to menubarXXX"
+tiny_mce_ui_101 = "Focus to toolbarXXX"
+tiny_mce_ui_102 = "Focus to element pathXXX"
+tiny_mce_ui_103 = "Focus to contextual toolbarXXX"
+tiny_mce_ui_104 = "Insert link (if link plugin activated)XXX"
+tiny_mce_ui_105 = "Save (if save plugin activated)XXX"
+tiny_mce_ui_106 = "Find (if searchreplace plugin activated)XXX"
+tiny_mce_ui_107 = "Plugins installed ({0}):XXX"
+tiny_mce_ui_108 = "Premium plugins:XXX"
+tiny_mce_ui_109 = "Learn more...XXX"
+tiny_mce_ui_110 = "You are using {0}XXX"
+tiny_mce_ui_111 = "PluginsXXX"
+tiny_mce_ui_112 = "Handy ShortcutsXXX"
+tiny_mce_ui_113 = "Horizontal lineXXX"
+tiny_mce_ui_114 = "Insert\/edit imageXXX"
+tiny_mce_ui_115 = "Image descriptionXXX"
+tiny_mce_ui_116 = "SourceXXX"
+tiny_mce_ui_117 = "DimensionsXXX"
+tiny_mce_ui_118 = "Constrain proportionsXXX"
+tiny_mce_ui_119 = "GeneralXXX"
+tiny_mce_ui_120 = "AdvancedXXX"
+tiny_mce_ui_121 = "StyleXXX"
+tiny_mce_ui_122 = "Vertical spaceXXX"
+tiny_mce_ui_123 = "Horizontal spaceXXX"
+tiny_mce_ui_124 = "BorderXXX"
+tiny_mce_ui_125 = "Insert imageXXX"
+tiny_mce_ui_126 = "ImageXXX"
+tiny_mce_ui_127 = "Image listXXX"
+tiny_mce_ui_128 = "Rotate counterclockwiseXXX"
+tiny_mce_ui_129 = "Rotate clockwiseXXX"
+tiny_mce_ui_130 = "Flip verticallyXXX"
+tiny_mce_ui_131 = "Flip horizontallyXXX"
+tiny_mce_ui_132 = "Edit imageXXX"
+tiny_mce_ui_133 = "Image optionsXXX"
+tiny_mce_ui_134 = "Zoom inXXX"
+tiny_mce_ui_135 = "Zoom outXXX"
+tiny_mce_ui_136 = "CropXXX"
+tiny_mce_ui_137 = "ResizeXXX"
+tiny_mce_ui_138 = "OrientationXXX"
+tiny_mce_ui_139 = "BrightnessXXX"
+tiny_mce_ui_140 = "SharpenXXX"
+tiny_mce_ui_141 = "ContrastXXX"
+tiny_mce_ui_142 = "Colour levelsXXX"
+tiny_mce_ui_143 = "GammaXXX"
+tiny_mce_ui_144 = "InvertXXX"
+tiny_mce_ui_145 = "ApplyXXX"
+tiny_mce_ui_146 = "BackXXX"
+tiny_mce_ui_147 = "Insert date\/timeXXX"
+tiny_mce_ui_148 = "Date\/timeXXX"
+tiny_mce_ui_149 = "Insert linkXXX"
+tiny_mce_ui_150 = "Insert\/edit linkXXX"
+tiny_mce_ui_151 = "Text to displayXXX"
+tiny_mce_ui_152 = "URLXXX"
+tiny_mce_ui_153 = "TargetXXX"
+tiny_mce_ui_154 = "NoneXXX"
+tiny_mce_ui_155 = "New windowXXX"
+tiny_mce_ui_156 = "Remove linkXXX"
+tiny_mce_ui_157 = "AnchorsXXX"
+tiny_mce_ui_158 = "LinkXXX"
+tiny_mce_ui_159 = "Paste or type a linkXXX"
+tiny_mce_ui_160 = "The URL you entered seems to be an email address. Do you want to add the required mailto: prefix?XXX"
+tiny_mce_ui_161 = "The URL you entered seems to be an external link. Do you want to add the required http:\/\/ prefix?XXX"
+tiny_mce_ui_162 = "Link listXXX"
+tiny_mce_ui_163 = "Insert videoXXX"
+tiny_mce_ui_164 = "Insert\/edit videoXXX"
+tiny_mce_ui_165 = "Insert\/edit mediaXXX"
+tiny_mce_ui_166 = "Alternative sourceXXX"
+tiny_mce_ui_167 = "PosterXXX"
+tiny_mce_ui_168 = "Paste your embed code below:XXX"
+tiny_mce_ui_169 = "EmbedXXX"
+tiny_mce_ui_170 = "MediaXXX"
+tiny_mce_ui_171 = "Non-breaking spaceXXX"
+tiny_mce_ui_172 = "Page breakXXX"
+tiny_mce_ui_173 = "Paste as textXXX"
+tiny_mce_ui_174 = "PreviewXXX"
+tiny_mce_ui_175 = "PrintXXX"
+tiny_mce_ui_176 = "SaveXXX"
+tiny_mce_ui_177 = "FindXXX"
+tiny_mce_ui_178 = "Replace withXXX"
+tiny_mce_ui_179 = "ReplaceXXX"
+tiny_mce_ui_180 = "Replace allXXX"
+tiny_mce_ui_181 = "PrevXXX"
+tiny_mce_ui_182 = "NextXXX"
+tiny_mce_ui_183 = "Find and replaceXXX"
+tiny_mce_ui_184 = "Could not find the specified string.XXX"
+tiny_mce_ui_185 = "Match caseXXX"
+tiny_mce_ui_186 = "Whole wordsXXX"
+tiny_mce_ui_187 = "Spell-checkXXX"
+tiny_mce_ui_188 = "IgnoreXXX"
+tiny_mce_ui_189 = "Ignore allXXX"
+tiny_mce_ui_190 = "FinishXXX"
+tiny_mce_ui_191 = "Add to DictionaryXXX"
+tiny_mce_ui_192 = "Insert tableXXX"
+tiny_mce_ui_193 = "Table propertiesXXX"
+tiny_mce_ui_194 = "Delete tableXXX"
+tiny_mce_ui_195 = "CellXXX"
+tiny_mce_ui_196 = "RowXXX"
+tiny_mce_ui_197 = "ColumnXXX"
+tiny_mce_ui_198 = "Cell propertiesXXX"
+tiny_mce_ui_199 = "Merge cellsXXX"
+tiny_mce_ui_200 = "Split cellXXX"
+tiny_mce_ui_201 = "Insert row beforeXXX"
+tiny_mce_ui_202 = "Insert row afterXXX"
+tiny_mce_ui_203 = "Delete rowXXX"
+tiny_mce_ui_204 = "Row propertiesXXX"
+tiny_mce_ui_205 = "Cut rowXXX"
+tiny_mce_ui_206 = "Copy rowXXX"
+tiny_mce_ui_207 = "Paste row beforeXXX"
+tiny_mce_ui_208 = "Paste row afterXXX"
+tiny_mce_ui_209 = "Insert column beforeXXX"
+tiny_mce_ui_210 = "Insert column afterXXX"
+tiny_mce_ui_211 = "Delete columnXXX"
+tiny_mce_ui_212 = "ColsXXX"
+tiny_mce_ui_213 = "RowsXXX"
+tiny_mce_ui_214 = "WidthXXX"
+tiny_mce_ui_215 = "HeightXXX"
+tiny_mce_ui_216 = "Cell spacingXXX"
+tiny_mce_ui_217 = "Cell paddingXXX"
+tiny_mce_ui_218 = "CaptionXXX"
+tiny_mce_ui_219 = "LeftXXX"
+tiny_mce_ui_220 = "CentreXXX"
+tiny_mce_ui_221 = "RightXXX"
+tiny_mce_ui_222 = "Cell typeXXX"
+tiny_mce_ui_223 = "ScopeXXX"
+tiny_mce_ui_224 = "AlignmentXXX"
+tiny_mce_ui_225 = "H AlignXXX"
+tiny_mce_ui_226 = "V AlignXXX"
+tiny_mce_ui_227 = "TopXXX"
+tiny_mce_ui_228 = "MiddleXXX"
+tiny_mce_ui_229 = "BottomXXX"
+tiny_mce_ui_230 = "Header cellXXX"
+tiny_mce_ui_231 = "Row groupXXX"
+tiny_mce_ui_232 = "Column groupXXX"
+tiny_mce_ui_233 = "Row typeXXX"
+tiny_mce_ui_234 = "HeaderXXX"
+tiny_mce_ui_235 = "BodyXXX"
+tiny_mce_ui_236 = "FooterXXX"
+tiny_mce_ui_237 = "Border colourXXX"
+tiny_mce_ui_238 = "Insert templateXXX"
+tiny_mce_ui_239 = "TemplatesXXX"
+tiny_mce_ui_240 = "TemplateXXX"
+tiny_mce_ui_241 = "Text colourXXX"
+tiny_mce_ui_242 = "Background colourXXX"
+tiny_mce_ui_243 = "Custom...XXX"
+tiny_mce_ui_244 = "Custom colourXXX"
+tiny_mce_ui_245 = "No colourXXX"
+tiny_mce_ui_246 = "Table of ContentsXXX"
+tiny_mce_ui_247 = "Show blocksXXX"
+tiny_mce_ui_248 = "Show invisible charactersXXX"
+tiny_mce_ui_249 = "Words: {0}XXX"
+tiny_mce_ui_250 = "{0} wordsXXX"
+tiny_mce_ui_251 = "FileXXX"
+tiny_mce_ui_252 = "EditXXX"
+tiny_mce_ui_253 = "InsertXXX"
+tiny_mce_ui_254 = "ViewXXX"
+tiny_mce_ui_255 = "FormatXXX"
+tiny_mce_ui_256 = "TableXXX"
+tiny_mce_ui_257 = "ToolsXXX"
+tiny_mce_ui_258 = "Powered by {0}XXX"
+tiny_mce_ui_259 = "Rich Text Area. Press ALT-F9 for menu. Press ALT-F10 for toolbar. Press ALT-0 for helpXXX"
