Alert Log page done

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -191,6 +191,12 @@ placeholder_4 = "A formatted list of users\' current security access groups"
 placeholder_5 = "A formatted table of usernames, full names, email addresses, and SAGs"
 placeholder_6 = "A formatted table of usernames, full names, email addresses, SAGs, and non-compliant rights"
 placeholder_7 = "The title of the project"
+placeholder_8 = "The user's username"
+placeholder_9 = "The user's full name"
+placeholder_10 = "The user's email address"
+placeholder_11 = "The user's current security access group"
+placeholder_12 = "A formatted list of the rights that do not comply with the user's security access group"
+placeholder_13 = "The date the user will be expired from the project"
 
 
 ; --------------------------------- ;
