--- a/lang/English.ini
+++ b/lang/English.ini
@@ -50,7 +50,7 @@ bad_role_assigment_import_2 = "The following permissions cannot be granted for t
 ; Project Status Page ;
 ; ------------------- ;
 
-status_ui_1 = "Alerts and Actions"
+status_ui_1 = "Users and Actions"
 status_ui_2 = "Project Status"
 status_ui_3 = "Introduction"
 status_ui_4 = "If there are users in this project with non-compliant rights (i.e., user rights that are
@@ -65,10 +65,10 @@ status_ui_10 = "This lets the user(s) know that their own user rights are curren
                 assigned SAG. There is also the option to schedule a reminder alert after a period of time."
 status_ui_11 = "This alert is sent to one or more users in the project who have the permission to change user rights. 
                 There is also the option to schedule a reminder alert after a period of time."
-status_ui_12 = "Set the expiration date of the user in this project. Alerts can be sent to the users and/or user rights 
+status_ui_12 = "Set the expiration date of the user in this project. Users can be sent to the users and/or user rights 
                 holders when the expiration is scheduled."
 status_ui_13 = "This lets the user(s) know that their own user rights are currently not in compliance with their 
-                assigned SAG. The options for the alert itself are similar to other alerts in REDCap:"
+                assigned SAG. The options for the alert itself are similar to other users in REDCap:"
 status_ui_14 = "Option"
 status_ui_15 = "Required"
 status_ui_16 = "Description"
@@ -110,7 +110,7 @@ status_ui_40 = "The options for this alert are identical with those described in
 status_ui_41 = "An alert can be sent to project user rights holders to notify them of the expiration"
 status_ui_42 = "The options for this alert are identical with those described in the Alert Project User Rights Holders 
                 section above, with the exception that no reminder is available to be scheduled"
-status_ui_43 = "<strong>Note:</strong> these alerts are sent immediately regardless of when the expiration is scheduled for."
+status_ui_43 = "<strong>Note:</strong> these users are sent immediately regardless of when the expiration is scheduled for."
 status_ui_44 = "Security Access Groups (SAGs) are used to restrict which user rights a REDCap user can be granted in a 
                 project. SAGs do not define the rights a user will have in a given project; rather, they define the set 
                 of allowable rights the user is able to be granted. SAGs are defined at the system level and are used in
@@ -137,7 +137,7 @@ status_ui_62 = "Expiration"
 status_ui_63 = "Security Access Group"
 status_ui_64 = "Noncompliant Rights"
 status_ui_65 = "Project Role"
-status_ui_66 = "The alerts were successfully sent."
+status_ui_66 = "The users were successfully sent."
 status_ui_67 = "The alert was successfully sent."
 status_ui_68 = "There was an error sending the alert."
 status_ui_69 = "The users were successfully expired."
@@ -166,7 +166,7 @@ status_ui_91 = "Reminder Subject:"
 status_ui_92 = "You must provide a subject for the reminder email"
 status_ui_93 = "Reminder Body:"
 status_ui_94 = "You must provide a body for the reminder email"
-status_ui_95 = "Send Alerts"
+status_ui_95 = "Send Users"
 status_ui_96 = "Select the recipients:"
 status_ui_97 = "REDCap Username"
 status_ui_98 = "You must select at least one recipient"
@@ -187,7 +187,7 @@ status_ui_106 = "Expire Users"
 placeholder_1 = "A formatted list of usernames"
 placeholder_2 = "A formatted list of users' full names"
 placeholder_3 = "A formatted list of users' emails"
-placeholder_4 = "A formatted list of users\' current security access groups"
+placeholder_4 = "A formatted list of users' current security access groups"
 placeholder_5 = "A formatted table of usernames, full names, email addresses, and SAGs"
 placeholder_6 = "A formatted table of usernames, full names, email addresses, SAGs, and non-compliant rights"
 placeholder_7 = "The title of the project"
@@ -226,66 +226,119 @@ dt_status_aria_sort_descending = ": activate to sort column descending"
 ; Project Alert Log page ;
 ; ---------------------- ;
 
-alerts_1 = "This page shows all alerts sent by the SAG module as well as all currently scheduled reminders."
-alerts_2 = "Begin time"
-alerts_3 = "End time"
-alerts_4 = "View past alerts"
-alerts_5 = "View future alerts"
-alerts_6 = "User Rights Holder"
-alerts_7 = "Original alert"
-alerts_8 = "Alert ID"
-alerts_9 = "Send Time"
-alerts_10 = "Alert Type"
-alerts_11 = "View Alert"
-alerts_12 = "User(s)"
-alerts_13 = "Recipient"
-alerts_14 = "Status"
-alerts_15 = "Alert Preview"
-alerts_16 = "Loading..."
-alerts_17 = "There was an error loading the alert preview."
-alerts_18 = "User Alert"
-alerts_19 = "User Rights Holder Alert"
-alerts_20 = "User Expiration Alert"
-alerts_21 = " (Reminder)"
-alerts_22 = "Are you sure?"
-alerts_23 = "You are about to delete this alert. This action cannot be undone."
-alerts_24 = "Delete Alert"
-alerts_25 = "Alert deleted successfully."
-alerts_26 = "There was an error deleting the alert."
-alerts_27 = "Error sending reminder"
-alerts_28 = "Reminder sent"
-alerts_29 = "Alert sent"
-alerts_30 = "Reminder scheduled"
-alerts_31 = "Delete alert"
-alerts_32 = "View"
-alerts_33 = "Filter users"
-alerts_34 = "Filter recipients"
-alerts_35 = "Filter alert types"
-alerts_36 = "Filter notification types"
-alerts_37 = "All"
+users_1 = "This page shows all users sent by the SAG module as well as all currently scheduled reminders."
+users_2 = "Begin time"
+users_3 = "End time"
+users_4 = "View past users"
+users_5 = "View future users"
+users_6 = "User Rights Holder"
+users_7 = "Original alert"
+users_8 = "Alert ID"
+users_9 = "Send Time"
+users_10 = "Alert Type"
+users_11 = "View Alert"
+users_12 = "User(s)"
+users_13 = "Recipient"
+users_14 = "Status"
+users_15 = "Alert Preview"
+users_16 = "Loading..."
+users_17 = "There was an error loading the alert preview."
+users_18 = "User Alert"
+users_19 = "User Rights Holder Alert"
+users_20 = "User Expiration Alert"
+users_21 = " (Reminder)"
+users_22 = "Are you sure?"
+users_23 = "You are about to delete this alert. This action cannot be undone."
+users_24 = "Delete Alert"
+users_25 = "Alert deleted successfully."
+users_26 = "There was an error deleting the alert."
+users_27 = "Error sending reminder"
+users_28 = "Reminder sent"
+users_29 = "Alert sent"
+users_30 = "Reminder scheduled"
+users_31 = "Delete alert"
+users_32 = "View"
+users_33 = "Filter users"
+users_34 = "Filter recipients"
+users_35 = "Filter alert types"
+users_36 = "Filter notification types"
+users_37 = "All"
 
 
 ; ------------------------------------ ;
 ; DataTables Project Alert Log strings ;
 ; ------------------------------------ ;
 
-dt_alerts_search_placeholder = "Search Alerts..."
-dt_alerts_info_filtered = "filtered from {0} total alerts"
-dt_alerts_empty_table = "No alerts found in this project"
-dt_alerts_info = "Showing {start} to {end} of {total} alerts"
-dt_alerts_info_empty = "Showing 0 to 0 of 0 alerts"
-dt_alerts_length_menu = "Show {0} alerts"
-dt_alerts_loading_records = "Loading..."
-dt_alerts_zero_records = "No matching alerts found"
-dt_alerts_select_rows_zero = "%d alerts selected"
-dt_alerts_select_rows_one = ""
-dt_alerts_select_rows_other = "One alert selected"
-dt_alerts_paginate_first = "First"
-dt_alerts_paginate_previous = "Previous"
-dt_alerts_paginate_next = "Next"
-dt_alerts_paginate_last = "Last"
-dt_alerts_aria_sort_ascending = ": activate to sort column ascending"
-dt_alerts_aria_sort_descending = ": activate to sort column descending"
+dt_users_search_placeholder = "Search Users..."
+dt_users_info_filtered = "filtered from {0} total users"
+dt_users_empty_table = "No users found in this project"
+dt_users_info = "Showing {start} to {end} of {total} users"
+dt_users_info_empty = "Showing 0 to 0 of 0 users"
+dt_users_length_menu = "Show {0} users"
+dt_users_loading_records = "Loading..."
+dt_users_zero_records = "No matching users found"
+dt_users_select_rows_zero = "%d users selected"
+dt_users_select_rows_one = ""
+dt_users_select_rows_other = "One alert selected"
+dt_users_paginate_first = "First"
+dt_users_paginate_previous = "Previous"
+dt_users_paginate_next = "Next"
+dt_users_paginate_last = "Last"
+dt_users_aria_sort_ascending = ": activate to sort column ascending"
+dt_users_aria_sort_descending = ": activate to sort column descending"
+
+
+; --------------------- ;
+; System User List page ;
+; --------------------- ;
+
+cc_user_1 = "Users"
+cc_user_2 = "Security Access Groups"
+cc_user_3 = "Reports"
+cc_user_4 = "This table shows all users in the REDCap system and their current SAG assignment. Use the <strong>Edit 
+            Users</strong> button to change a user's SAG assignment. You may export the current list of SAG assignments 
+            or import a CSV file of assignments using the buttons below."
+cc_user_5 = "Edit Users"
+cc_user_6 = "Import or Export User Assignments"
+cc_user_7 = "Toggle Dropdown"
+cc_user_8 = "Export User Assignments"
+cc_user_9 = "Import User Assignments"
+cc_user_10 = "Download Import Template"
+cc_user_11 = "SAG Name"
+cc_user_12 = "SAG ID"
+cc_user_13 = "Stop Editing"
+cc_user_14 = "Edit Users"
+cc_user_15 = "Export Filtered Data?"
+cc_user_16 = "You have a filter applied to the table. Do you want to export the filtered data or all data?"
+cc_user_17 = "Export Filtered Data"
+cc_user_18 = "Export All Data"
+cc_user_19 = "Successfully imported assignments."
+cc_user_20 = "Error importing CSV"
+cc_user_21 = "Error assigning SAG"
+cc_user_22 = "Hidden SAG"
+
+
+; ----------------------------------- ;
+; DataTables System User List strings ;
+; ----------------------------------- ;
+
+dt_cc_users_search_placeholder = "Search Users..."
+dt_cc_users_info_filtered = "filtered from {0} total users"
+dt_cc_users_empty_table = "No users found in this project"
+dt_cc_users_info = "Showing {start} to {end} of {total} users"
+dt_cc_users_info_empty = "Showing 0 to 0 of 0 users"
+dt_cc_users_length_menu = "Show {0} users"
+dt_cc_users_loading_records = "Loading..."
+dt_cc_users_zero_records = "No matching users found"
+dt_cc_users_select_rows_zero = "%d users selected"
+dt_cc_users_select_rows_one = ""
+dt_cc_users_select_rows_other = "One user selected"
+dt_cc_users_paginate_first = "First"
+dt_cc_users_paginate_previous = "Previous"
+dt_cc_users_paginate_next = "Next"
+dt_cc_users_paginate_last = "Last"
+dt_cc_users_aria_sort_ascending = ": activate to sort column ascending"
+dt_cc_users_aria_sort_descending = ": activate to sort column descending"
 
 
 ; ------------------------ ;
