--- a/lang/English.ini
+++ b/lang/English.ini
@@ -341,6 +341,55 @@ dt_cc_users_aria_sort_ascending = ": activate to sort column ascending"
 dt_cc_users_aria_sort_descending = ": activate to sort column descending"
 
 
+; -------------------- ;
+; System SAG Edit page ;
+; -------------------- ;
+
+cc_sags_1 = "This table shows all the SAGs that currently exist in the system. A SAG must be created here before it can 
+            be assigned to a user. The current list of SAGs can be exported as a CSV file, and a CSV file can be 
+            imported to update existing SAGs or to create new SAGs."
+cc_sags_2 = "Import or Export SAGs"
+cc_sags_3 = "Export SAGs (raw)"
+cc_sags_4 = "Export SAGs (labels)"
+cc_sags_5 = "Import SAGs"
+cc_sags_6 = "Download Import Template"
+cc_sags_7 = "Create new Security Access Group:"
+cc_sags_8 = "Enter new SAG name"
+cc_sags_9 = "Create SAG"
+cc_sags_10 = "Order"
+cc_sags_11 = "Are you sure you want to delete this SAG?"
+cc_sags_12 = "Delete SAG"
+cc_sags_13 = "The SAG was deleted"
+cc_sags_14 = "What would you like the new SAG to be called?"
+cc_sags_15 = "Copy"
+cc_sags_16 = "Copy SAG"
+cc_sags_17 = "SAG Successfully Copied"
+cc_sags_18 = "Error Copying SAG"
+cc_sags_19 = "SAG \"{0}\" Successfully Saved"
+cc_sags_20 = "Error Saving SAG \"{0}\""
+cc_sags_21 = "SAG Successfully Created"
+cc_sags_22 = "Error Creating SAG"
+cc_sags_23 = "You must specify a SAG name"
+cc_sags_24 = "Successfully imported Security Access Group definitions."
+cc_sags_25 = "View & Edit Forms and Survey Responses"
+cc_sags_26 = "View & Edit Forms"
+cc_sags_27 = "Read Only"
+cc_sags_28 = "Full Data Set"
+cc_sags_29 = "Remove Identifiers"
+cc_sags_30 = "De-Identified"
+cc_sags_31 = "Reviewer"
+cc_sags_32 = "Entry Person"
+cc_sags_33 = "Setup"
+cc_sags_34 = "Dashboard"
+cc_sags_35 = "Randomize"
+cc_sags_36 = "View"
+cc_sags_37 = "Respond"
+cc_sags_38 = "Open"
+cc_sags_39 = "Close"
+cc_sags_40 = "Export"
+cc_sags_41 = "Import"
+
+
 ; ------------------------ ;
 ; Rich Text Editor strings ;
 ; ------------------------ ;
