working on system reports page

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -390,6 +390,88 @@ cc_sags_40 = "Export"
 cc_sags_41 = "Import"
 
 
+; ------------------ ;
+; System Report page ;
+; ------------------ ;
+
+cc_reports_1 = "Select a report type from the dropdown below. The report will be generated and displayed in a table 
+            below. You can then export the report to Excel by clicking the <em>Export Excel</em> button."
+cc_reports_2 = "More..."
+cc_reports_3 = "Less..."
+cc_reports_4 = "Users with Noncompliant Rights (non-expired)"
+cc_reports_5 = "This report lists all users who are assigned to a SAG that does not allow the user to be granted all of 
+            the rights they currently have in a project. This report only includes users if they are not currently 
+            expired in the project(s)."
+cc_reports_6 = "Users with Noncompliant Rights (all)"
+cc_reports_7 = "This report lists all users who are assigned to a SAG that does not allow the user to be granted all of 
+            the rights they currently have in a project. This report includes all users, regardless of whether they are
+            currently expired in the project(s)."
+cc_reports_8 = "Projects with Noncompliant Rights (non-expired)"
+cc_reports_9 = "This report lists all projects that have at least one user who is assigned to a SAG that does not allow 
+            the user to be granted all of the rights they currently have in the project. This report only includes users
+            who have a non-expired user account."
+cc_reports_10 = "Projects with Noncompliant Rights (all)"
+cc_reports_11 = "This report lists all projects that have at least one user who is assigned to a SAG that does not allow
+            the user to be granted all of the rights they currently have in the project. This report includes all users,
+            regardless of whether their user account is expired."
+cc_reports_12 = "Users and Projects with Noncompliant Rights (non-expired)"
+cc_reports_13 = "This report lists every user and project combination in which the user is assigned to a SAG that does 
+            not allow the user to be granted all of the rights they currently have in the project. This report only
+            includes users who are not currently expired in the project."
+cc_reports_14 = "Users and Projects with Noncompliant Rights (all)"
+cc_reports_15 = "This report lists every user and project combination in which the user is assigned to a SAG that does 
+            not allow the user to be granted all of the rights they currently have in the project. This report includes
+            all users, regardless of whether they are currently expired in the project."
+cc_reports_16 = "Select Report Type"
+cc_reports_17 = "Project"
+cc_reports_18 = "Count of Noncompliant Users"
+cc_reports_19 = "Noncompliant Users"
+cc_reports_20 = "Security Access Groups"
+cc_reports_21 = "Noncompliant Rights"
+cc_reports_22 = "Count of Projects"
+cc_reports_23 = "Projects"
+cc_reports_24 = "Projects with Noncompliant Rights"
+cc_reports_25 = "(including expired users)"
+cc_reports_26 = "(excluding expired users)"
+cc_reports_27 = "Filter users..."
+cc_reports_28 = "Filter SAGs..."
+cc_reports_29 = "Filter projects..."
+cc_reports_30 = "Filter rights..."
+cc_reports_31 = "Export Excel"
+cc_reports_32 = "Count of Users"
+cc_reports_33 = "Project ID"
+cc_reports_34 = "Project Title"
+cc_reports_35 = "SAG IDs"
+cc_reports_36 = "SAG Names"
+cc_reports_37 = "Search..."
+cc_reports_38 = "Users with Noncompliant Rights"
+cc_reports_39 = "Projects granting Noncompliant Rights to this User"
+cc_reports_40 = "Project Titles"
+
+
+; -------------------------------- ;
+; DataTables System Report strings ;
+; -------------------------------- ;
+
+dt_cc_reports_search_placeholder = "Search..."
+dt_cc_reports_info_filtered = "filtered from {0} total entries"
+dt_cc_reports_empty_table = "No entries found in this project"
+dt_cc_reports_info = "Showing {start} to {end} of {total} entries"
+dt_cc_reports_info_empty = "Showing 0 to 0 of 0 entries"
+dt_cc_reports_length_menu = "Show {0} entries"
+dt_cc_reports_loading_records = "Loading..."
+dt_cc_reports_zero_records = "No matching entries found"
+dt_cc_reports_select_rows_zero = "%d entries selected"
+dt_cc_reports_select_rows_one = ""
+dt_cc_reports_select_rows_other = "One entry selected"
+dt_cc_reports_paginate_first = "First"
+dt_cc_reports_paginate_previous = "Previous"
+dt_cc_reports_paginate_next = "Next"
+dt_cc_reports_paginate_last = "Last"
+dt_cc_reports_aria_sort_ascending = ": activate to sort column ascending"
+dt_cc_reports_aria_sort_descending = ": activate to sort column descending"
+
+
 ; ------------------------ ;
 ; Rich Text Editor strings ;
 ; ------------------------ ;
