finished system reports page

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -447,6 +447,9 @@ cc_reports_37 = "Search..."
 cc_reports_38 = "Users with Noncompliant Rights"
 cc_reports_39 = "Projects granting Noncompliant Rights to this User"
 cc_reports_40 = "Project Titles"
+cc_reports_41 = "Project granting Noncompliant Rights to this User"
+cc_reports_42 = "Users and Projects with Noncompliant Rights"
+
 
 
 ; -------------------------------- ;
