--- a/lang/English.ini
+++ b/lang/English.ini
@@ -178,6 +178,10 @@ status_ui_103 = "Send Notification to User(s)?"
 status_ui_104 = "Yes, send a notification"
 status_ui_105 = "Send Notification to User Rights Holders?"
 status_ui_106 = "Expire Users"
+status_ui_107 = "Email Address"
+status_ui_108 = "Current SAG"
+status_ui_109 = "To:"
+status_ui_110 = "Message:"
 
 
 ; ------------ ;
@@ -226,66 +230,89 @@ dt_status_aria_sort_descending = ": activate to sort column descending"
 ; Project Alert Log page ;
 ; ---------------------- ;
 
-users_1 = "This page shows all users sent by the SAG module as well as all currently scheduled reminders."
-users_2 = "Begin time"
-users_3 = "End time"
-users_4 = "View past users"
-users_5 = "View future users"
-users_6 = "User Rights Holder"
-users_7 = "Original alert"
-users_8 = "Alert ID"
-users_9 = "Send Time"
-users_10 = "Alert Type"
-users_11 = "View Alert"
-users_12 = "User(s)"
-users_13 = "Recipient"
-users_14 = "Status"
-users_15 = "Alert Preview"
-users_16 = "Loading..."
-users_17 = "There was an error loading the alert preview."
-users_18 = "User Alert"
-users_19 = "User Rights Holder Alert"
-users_20 = "User Expiration Alert"
-users_21 = " (Reminder)"
-users_22 = "Are you sure?"
-users_23 = "You are about to delete this alert. This action cannot be undone."
-users_24 = "Delete Alert"
-users_25 = "Alert deleted successfully."
-users_26 = "There was an error deleting the alert."
-users_27 = "Error sending reminder"
-users_28 = "Reminder sent"
-users_29 = "Alert sent"
-users_30 = "Reminder scheduled"
-users_31 = "Delete alert"
-users_32 = "View"
-users_33 = "Filter users"
-users_34 = "Filter recipients"
-users_35 = "Filter alert types"
-users_36 = "Filter notification types"
-users_37 = "All"
+alerts_1 = "This page shows all alerts sent by the SAG module as well as all currently scheduled reminders."
+alerts_2 = "Begin time"
+alerts_3 = "End time"
+alerts_4 = "View past alerts"
+alerts_5 = "View future alerts"
+alerts_6 = "User Rights Holder"
+alerts_7 = "Original alert"
+alerts_8 = "Alert ID"
+alerts_9 = "Send Time"
+alerts_10 = "Alert Type"
+alerts_11 = "View Alert"
+alerts_12 = "User(s)"
+alerts_13 = "Recipient"
+alerts_14 = "Status"
+alerts_15 = "Alert Preview"
+alerts_16 = "Loading..."
+alerts_17 = "There was an error loading the alert preview."
+alerts_18 = "User Alert"
+alerts_19 = "User Rights Holder Alert"
+alerts_20 = "User Expiration Alert"
+alerts_21 = " (Reminder)"
+alerts_22 = "Are you sure?"
+alerts_23 = "You are about to delete this alert. This action cannot be undone."
+alerts_24 = "Delete Alert"
+alerts_25 = "Alert deleted successfully."
+alerts_26 = "There was an error deleting the alert."
+alerts_27 = "Error sending reminder"
+alerts_28 = "Reminder sent"
+alerts_29 = "Alert sent"
+alerts_30 = "Reminder scheduled"
+alerts_31 = "Delete alert"
+alerts_32 = "View"
+alerts_33 = "Filter alerts"
+alerts_34 = "Filter recipients"
+alerts_35 = "Filter alert types"
+alerts_36 = "Filter notification types"
+alerts_37 = "All"
+
+
+; --------------------- ;
+; Miscellaneous strings ;
+; --------------------- ;
+
+misc_1 = "The provided SAG ID was bad."
+misc_2 = "SAG deleted"
+misc_3 = "Alert not found"
+misc_4 = "Username not found"
+misc_5 = "SAG not found"
+misc_6 = "SAG assigned"
+misc_7 = "Error setting Expiration Date"
+misc_8 = "Permission name was invalid: {0}"
+misc_9 = "SAG name was invalid: {0}"
+misc_10 = "Input file did not contain '{0}' and/or '{1}' columns."
+misc_11 = "No valid SAGs were present in the import file."
+misc_12 = "New:"
+misc_13 = "Current:"
+misc_14 = "Confirm SAG definitions"
+misc_15 = "Examine the table of proposed changes below to verify it is correct. Only SAGs in highlighted rows or with 
+            highlighted cells will be affected."
+misc_16 = "Confirm"
 
 
 ; ------------------------------------ ;
 ; DataTables Project Alert Log strings ;
 ; ------------------------------------ ;
 
-dt_users_search_placeholder = "Search Users..."
-dt_users_info_filtered = "filtered from {0} total users"
-dt_users_empty_table = "No users found in this project"
-dt_users_info = "Showing {start} to {end} of {total} users"
-dt_users_info_empty = "Showing 0 to 0 of 0 users"
-dt_users_length_menu = "Show {0} users"
-dt_users_loading_records = "Loading..."
-dt_users_zero_records = "No matching users found"
-dt_users_select_rows_zero = "%d users selected"
-dt_users_select_rows_one = ""
-dt_users_select_rows_other = "One alert selected"
-dt_users_paginate_first = "First"
-dt_users_paginate_previous = "Previous"
-dt_users_paginate_next = "Next"
-dt_users_paginate_last = "Last"
-dt_users_aria_sort_ascending = ": activate to sort column ascending"
-dt_users_aria_sort_descending = ": activate to sort column descending"
+dt_alerts_search_placeholder = "Search Alerts..."
+dt_alerts_info_filtered = "filtered from {0} total alerts"
+dt_alerts_empty_table = "No alerts found in this project"
+dt_alerts_info = "Showing {start} to {end} of {total} alerts"
+dt_alerts_info_empty = "Showing 0 to 0 of 0 alerts"
+dt_alerts_length_menu = "Show {0} alerts"
+dt_alerts_loading_records = "Loading..."
+dt_alerts_zero_records = "No matching alerts found"
+dt_alerts_select_rows_zero = "%d alerts selected"
+dt_alerts_select_rows_one = ""
+dt_alerts_select_rows_other = "One alert selected"
+dt_alerts_paginate_first = "First"
+dt_alerts_paginate_previous = "Previous"
+dt_alerts_paginate_next = "Next"
+dt_alerts_paginate_last = "Last"
+dt_alerts_aria_sort_ascending = ": activate to sort column ascending"
+dt_alerts_aria_sort_descending = ": activate to sort column descending"
 
 
 ; --------------------- ;
