--- a/lang/English.ini
+++ b/lang/English.ini
@@ -290,6 +290,26 @@ misc_14 = "Confirm SAG definitions"
 misc_15 = "Examine the table of proposed changes below to verify it is correct. Only SAGs in highlighted rows or with 
             highlighted cells will be affected."
 misc_16 = "Confirm"
+misc_17 = "One or more username was invalid."
+misc_18 = "One or more SAG ID was invalid."
+misc_19 = "The following users and/or SAGs do not exist."
+misc_20 = "No valid SAG assignments were present in the import file."
+misc_21 = "Confirm SAG assignments"
+misc_22 = "Examine the table of proposed changes below to verify it is correct. Only users in highlighted rows will be 
+            affected, and for those users the \"SAG\" column will show both the {0} as well as the {1}."
+misc_23 = "proposed SAG"
+misc_24 = "current SAG"
+misc_25 = "There are no changes to make"
+misc_26 = "Creating new Security Access Group"
+misc_27 = "Editing existing Security Access Group"
+misc_28 = "SAG name:"
+misc_29 = "View Queries"
+misc_30 = "Open Queries"
+misc_31 = "Respond to Queries"
+misc_32 = "Close Queries"
+misc_33 = "Clinical Data Pull from EHR -or- Dynamic Data Pull from External Source System"
+misc_34 = "Save New SAG"
+misc_35 = "Save Changes"
 
 
 ; ------------------------------------ ;
