--- a/lang/English.ini
+++ b/lang/English.ini
@@ -1,6 +1,6 @@
 
 
-
+[General Settings]
 ; Module
 module_name = "Security Access Groups"
 module_description = "Create and manage Security Access Groups, which define at the system level the set of allowable user rights a REDCap user is able to be granted in a project"
@@ -16,6 +16,7 @@ error_1 = "Something went wrong."
 error_2 = "Error"
 
 
+[End User Facing]
 ; ----------------------------------------------- ;
 ; User Right Page - Popup Notifications for Users ;
 ; ----------------------------------------------- ;
@@ -45,7 +46,7 @@ bad_role_import_2 = "The following roles have users assigned to them, and the fo
 bad_role_assigment_import_1 = "You cannot assign those users to those roles."
 bad_role_assigment_import_2 = "The following permissions cannot be granted for the following users due to their current SAG assignment"
 
-
+[Admin Only Facing]
 ; ------------------- ;
 ; Project Status Page ;
 ; ------------------- ;
