--- a/lang/English.ini
+++ b/lang/English.ini
@@ -1,5 +1,3 @@
-
-
 [General Settings]
 ; Module
 module_name = "Security Access Groups"
@@ -25,26 +23,17 @@ error_2 = "Error"
 bad_user_1 = "You cannot grant those user rights to user \"{0}\""
 bad_user_2 = "The user is currently assigned to the SAG: \"<strong>{0}</strong>\""
 bad_user_3 = "The following permissions you are attempting to grant cannot be granted to users in that SAG:"
-
-; User Roles
 bad_role_1 = "You cannot grant those rights to the role"
 bad_role_2 = "The following users are assigned to that role, and the following permissions cannot be granted to them because of their current SAG assignment"
-
-; User Role Assignment
 bad_role_assignment_1 = "You cannot assign user \"{0}\" to user role \"{1}\""
 bad_role_assignment_2 = "The following permissions allowed in user role \"{0}\" cannot be granted to users in that SAG:"
-
-; User Import (CSV)
 bad_user_import_1 = "The following users included in the provided import file cannot have the following permissions granted to them due to their current SAG assignment:"
 bad_user_import_2 = "You cannot import those users."
-
-; Role Import (CSV)
 bad_role_import_1 = "You cannot import those roles."
 bad_role_import_2 = "The following roles have users assigned to them, and the following permissions cannot be granted for those users due to their current SAG assignment"
-
-; Role Assignment Import (CSV)
 bad_role_assigment_import_1 = "You cannot assign those users to those roles."
 bad_role_assigment_import_2 = "The following permissions cannot be granted for the following users due to their current SAG assignment"
+
 
 [Admin Only Facing]
 ; ------------------- ;
@@ -216,9 +205,9 @@ dt_status_info_empty = "Showing 0 to 0 of 0 users"
 dt_status_length_menu = "Show {0} users"
 dt_status_loading_records = "Loading..."
 dt_status_zero_records = "No matching users found"
-dt_status_select_rows_zero = "%d users selected"
-dt_status_select_rows_one = ""
-dt_status_select_rows_other = "One user selected"
+dt_status_select_rows_zero = ""
+dt_status_select_rows_one = "1 user selected"
+dt_status_select_rows_other = "%d users selected"
 dt_status_paginate_first = "First"
 dt_status_paginate_previous = "Previous"
 dt_status_paginate_next = "Next"
@@ -325,9 +314,9 @@ dt_alerts_info_empty = "Showing 0 to 0 of 0 alerts"
 dt_alerts_length_menu = "Show {0} alerts"
 dt_alerts_loading_records = "Loading..."
 dt_alerts_zero_records = "No matching alerts found"
-dt_alerts_select_rows_zero = "%d alerts selected"
-dt_alerts_select_rows_one = ""
-dt_alerts_select_rows_other = "One alert selected"
+dt_alerts_select_rows_zero = ""
+dt_alerts_select_rows_one = "1 alert selected"
+dt_alerts_select_rows_other = "%d alerts selected"
 dt_alerts_paginate_first = "First"
 dt_alerts_paginate_previous = "Previous"
 dt_alerts_paginate_next = "Next"
@@ -378,9 +367,9 @@ dt_cc_users_info_empty = "Showing 0 to 0 of 0 users"
 dt_cc_users_length_menu = "Show {0} users"
 dt_cc_users_loading_records = "Loading..."
 dt_cc_users_zero_records = "No matching users found"
-dt_cc_users_select_rows_zero = "%d users selected"
-dt_cc_users_select_rows_one = ""
-dt_cc_users_select_rows_other = "One user selected"
+dt_cc_users_select_rows_zero = ""
+dt_cc_users_select_rows_one = "1 user selected"
+dt_cc_users_select_rows_other = "%d users selected"
 dt_cc_users_paginate_first = "First"
 dt_cc_users_paginate_previous = "Previous"
 dt_cc_users_paginate_next = "Next"
@@ -499,7 +488,6 @@ cc_reports_41 = "Project granting Noncompliant Rights to this User"
 cc_reports_42 = "Users and Projects with Noncompliant Rights"
 
 
-
 ; -------------------------------- ;
 ; DataTables System Report strings ;
 ; -------------------------------- ;
@@ -512,9 +500,9 @@ dt_cc_reports_info_empty = "Showing 0 to 0 of 0 entries"
 dt_cc_reports_length_menu = "Show {0} entries"
 dt_cc_reports_loading_records = "Loading..."
 dt_cc_reports_zero_records = "No matching entries found"
-dt_cc_reports_select_rows_zero = "%d entries selected"
-dt_cc_reports_select_rows_one = ""
-dt_cc_reports_select_rows_other = "One entry selected"
+dt_cc_reports_select_rows_zero = ""
+dt_cc_reports_select_rows_one = "1 entry selected"
+dt_cc_reports_select_rows_other = "%d entries selected"
 dt_cc_reports_paginate_first = "First"
 dt_cc_reports_paginate_previous = "Previous"
 dt_cc_reports_paginate_next = "Next"
@@ -588,8 +576,8 @@ user_reminder_email_descriptive = "<div class='bg-primary text-light p-2'>
             alert's send time.
         </p>
     <div>"
-user_reminder_email_subject_template = "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Reminder Alert Email Default Subject</strong>"
-user_reminder_email_body_template = "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Reminder Email Default Body</strong>"
+user_reminder_email_subject_template = "<div style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Reminder Alert Email Default Subject</strong>"
+user_reminder_email_body_template = "<div style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Reminder Email Default Body</strong>"
 user_rights_holders_email_descriptive = "<div class='bg-warning text-body p-2'>
         <strong>User Rights Holder Alert Email Settings</strong>
         <p>
@@ -652,8 +640,8 @@ user_rights_holders_reminder_email_descriptive = "<div class='bg-warning text-bo
             permissions in projects with users whose rights are not in compliance
         </p>
     </div>"
-user_rights_holders_reminder_email_subject_template = "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Rights Holders Reminder Alert Email Default Subject</strong>"
-user_rights_holders_reminder_email_body_template = "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Rights Holders Reminder Alert Email Default Body</strong>"
+user_rights_holders_reminder_email_subject_template = "<div style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Rights Holders Reminder Alert Email Default Subject</strong>"
+user_rights_holders_reminder_email_body_template = "<div style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Rights Holders Reminder Alert Email Default Body</strong>"
 user_expiration_email_descriptive = "<div class='bg-danger text-light p-2'>
         <strong>User Expiration Alert Email Settings</strong>
         <p>
@@ -684,10 +672,10 @@ user_expiration_email_descriptive = "<div class='bg-danger text-light p-2'>
         </table>
         <strong>You can also use any REDCap Smart Variable</strong>
     </div>"
-user_expiration_email_subject_template = "<span style='border: 1px solid #7abaff; background-color: #b8daff;' class='p-2'><strong>User Expiration Alert Email Default Subject</strong>"
-user_expiration_email_body_template = "<span style='border: 1px solid #7abaff; background-color: #b8daff;' class='p-2'><strong>User Expiration Alert Email Default Body</strong>"
-user_expiration_user_rights_holders_email_subject_template = "<span style='border: 1px solid #ffdf7e; background-color: #ffeeba;' class='p-2'><strong>User Rights Holders Alert Email Default Subject</strong>"
-user_expiration_user_rights_holders_email_body_template = "<span style='border: 1px solid #ffdf7e; background-color: #ffeeba;' class='p-2'><strong>User Rights Holders Alert Email Default Body</strong>"
+user_expiration_email_subject_template = "<div style='border: 1px solid #7abaff; background-color: #b8daff;' class='p-2'><strong>User Expiration Alert Email Default Subject</strong>"
+user_expiration_email_body_template = "<div style='border: 1px solid #7abaff; background-color: #b8daff;' class='p-2'><strong>User Expiration Alert Email Default Body</strong>"
+user_expiration_user_rights_holders_email_subject_template = "<div style='border: 1px solid #ffdf7e; background-color: #ffeeba;' class='p-2'><strong>User Rights Holders Alert Email Default Subject</strong>"
+user_expiration_user_rights_holders_email_body_template = "<div style='border: 1px solid #ffdf7e; background-color: #ffeeba;' class='p-2'><strong>User Rights Holders Alert Email Default Body</strong>"
 
 
 ; ------------------------ ;
